// Copyright 2021 Harness Inc. All rights reserved.
// Use of this source code is governed by the PolyForm Shield 1.0.0 license
// that can be found in the licenses directory at the root of this repository, also available at
// https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.

syntax = "proto3";

package io.harness.pms.contracts.execution;

option java_multiple_files = true;

enum ExecutionMode {
  UNKNOWN = 0;
  SYNC = 1;
  ASYNC = 2;

  TASK_CHAIN = 3;
  TASK = 4;

  CHILD_CHAIN = 5;
  CHILDREN = 6;
  CHILD = 7;

  SKIP = 8;

  APPROVAL = 9;

  CONSTRAINT = 10;
  WAIT_STEP = 11;
  ASYNC_CHAIN = 12;
}
